examples/test/testpolicy2825.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2825
  namespace: namespace403
spec:
  podSelector:
    matchLabels:
      key34: value31
      key12: value43
      key28: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value15
          key36: value48
      podSelector:
        matchLabels:
          key49: value16
